Added "upload_hack" to advanced_udf_with_gpu.ipynb and also fixed upload to cache

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/advanced_udf_with_gpu.ipynb
@@ -106,7 +106,11 @@
    "id": "7e71b1278aa02213"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "uploading_model"
+    ]
+   },
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
