--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/setup.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/gpu_in_udf/setup.ipynb
@@ -89,7 +89,7 @@
    "execution_count": null,
    "source": [
     "from exasol.nb_connector.slc import CondaPackageDefinition, PipPackageDefinition\n",
-    "pytorch_pkg = CondaPackageDefinition(pkg=\"pytorch\", version=\"2.7.1=cuda129_mkl_py310_hecdad2d_304#\")\n",
+    "pytorch_pkg = CondaPackageDefinition(pkg=\"pytorch\", version=\"2.7.1=cuda129_mkl_py310_hecdad2d_304\")\n",
     "slc.append_custom_conda_packages([pytorch_pkg])\n",
     "te_pkg = PipPackageDefinition(pkg=\"exasol-transformers-extension\", version=\"2.2.1\")\n",
     "slc.append_custom_pip_packages([te_pkg])"
