--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_administration.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_administration.ipynb
@@ -22,39 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0ca8f5fb-0fe7-4f07-895d-0857d6c82af2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b2efde5f3e84a79904ac0d88bd90f0a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9eaa72517d548d5a1419be7f3f7037b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(Box(children=(Label(value='Configuration Store', layout=Layout(border_bottom='solid 1px', border…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
@@ -71,35 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9fe38507-de1a-417e-81d4-70c956a70914",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@172.19.0.2:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'exa+websocket://sys:***@172.19.0.2:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@172.19.0.2:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'exa+websocket://sys:***@172.19.0.2:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
    ]
@@ -120,137 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5f1ff6db-1bd5-4886-b353-27f3c72db2bf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠋ - Huggingface model arpanghoshal/EkmanClassifier "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0a1398121c244d1afce2642133c33a6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/766 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠏ - Huggingface model arpanghoshal/EkmanClassifier "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ea805c2f71b40c68fc86464911f29cb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/433M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠸ - Huggingface model arpanghoshal/EkmanClassifier "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c881e708eb14bca90b788380101b8e0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/235 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠋ - Huggingface model arpanghoshal/EkmanClassifier "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28e7c95abd484162ac2f1a237c57b601",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "vocab.txt: 0.00B [00:00, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a18829932b543099a1d0d07ae8810ed",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/433M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "⠋ - Huggingface model arpanghoshal/EkmanClassifier "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2682dd94bc9f4cdba0fd8ecb273ecbe8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/182 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ - Huggingface model arpanghoshal/EkmanClassifier \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForSequenceClassification\n",
@@ -273,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a6a9e9b4-d9ce-410b-b374-a7d9f8feccea",
    "metadata": {
     "slideshow": {
@@ -281,77 +100,11 @@
     },
     "tags": [
      "running_model"
-    ],
-    "SqlCellData": {
-     "variableName$1": "df_sql1"
-    }
+    ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@172.19.0.2:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'exa+websocket://sys:***@172.19.0.2:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">1 rows affected.</span>"
-      ],
-      "text/plain": [
-       "1 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>bucketfs_conn</th>\n",
-       "            <th>sub_dir</th>\n",
-       "            <th>model_name</th>\n",
-       "            <th>task_name</th>\n",
-       "            <th>model_path</th>\n",
-       "            <th>error_message</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>bfs_ai_lab_connection</td>\n",
-       "            <td>models</td>\n",
-       "            <td>arpanghoshal/EkmanClassifier</td>\n",
-       "            <td>text-classification</td>\n",
-       "            <td>/buckets/bfsdefault/default/ai-lab/models/arpanghoshal/EkmanClassifier_text-classification</td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "+-----------------------+---------+------------------------------+---------------------+--------------------------------------------------------------------------------------------+---------------+\n",
-       "|     bucketfs_conn     | sub_dir |          model_name          |      task_name      |                                         model_path                                         | error_message |\n",
-       "+-----------------------+---------+------------------------------+---------------------+--------------------------------------------------------------------------------------------+---------------+\n",
-       "| bfs_ai_lab_connection |  models | arpanghoshal/EkmanClassifier | text-classification | /buckets/bfsdefault/default/ai-lab/models/arpanghoshal/EkmanClassifier_text-classification |      None     |\n",
-       "+-----------------------+---------+------------------------------+---------------------+--------------------------------------------------------------------------------------------+---------------+"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "SELECT TE_LIST_MODELS_UDF(\n",
     "    '{{ai_lab_config.bfs_connection_name}}',\n",
     "    '{{ai_lab_config.bfs_model_subdir}}'\n",
@@ -371,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1eb66252-36b6-441f-9e7d-bf9ffcb3f8df",
    "metadata": {
     "slideshow": {
@@ -379,77 +132,11 @@
     },
     "tags": [
      "running_model"
-    ],
-    "SqlCellData": {
-     "variableName$1": "df_sql2"
-    }
+    ]
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@172.19.0.2:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'exa+websocket://sys:***@172.19.0.2:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">1 rows affected.</span>"
-      ],
-      "text/plain": [
-       "1 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>bfs_conn</th>\n",
-       "            <th>sub_dir</th>\n",
-       "            <th>model_name</th>\n",
-       "            <th>task_type</th>\n",
-       "            <th>success</th>\n",
-       "            <th>error_message</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>bfs_ai_lab_connection</td>\n",
-       "            <td>models</td>\n",
-       "            <td>arpanghoshal/EkmanClassifier</td>\n",
-       "            <td>text-classification</td>\n",
-       "            <td>True</td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "+-----------------------+---------+------------------------------+---------------------+---------+---------------+\n",
-       "|        bfs_conn       | sub_dir |          model_name          |      task_type      | success | error_message |\n",
-       "+-----------------------+---------+------------------------------+---------------------+---------+---------------+\n",
-       "| bfs_ai_lab_connection |  models | arpanghoshal/EkmanClassifier | text-classification |   True  |      None     |\n",
-       "+-----------------------+---------+------------------------------+---------------------+---------+---------------+"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "SELECT TE_DELETE_MODEL_UDF(\n",
     "    '{{ai_lab_config.bfs_connection_name}}',\n",
     "    '{{ai_lab_config.bfs_model_subdir}}',\n",
@@ -468,79 +155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9ad81a7f-f0ca-4473-a4ba-25349313f5d9",
-   "metadata": {
-    "SqlCellData": {
-     "variableName$1": "df_sql3"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"None\">Running query in &#x27;exa+websocket://sys:***@172.19.0.2:8563/AI_LAB?ENCRYPTION=Yes&amp;SSLCertificate=SSL_VERIFY_NONE&#x27;</span>"
-      ],
-      "text/plain": [
-       "Running query in 'exa+websocket://sys:***@172.19.0.2:8563/AI_LAB?ENCRYPTION=Yes&SSLCertificate=SSL_VERIFY_NONE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"color: green\">1 rows affected.</span>"
-      ],
-      "text/plain": [
-       "1 rows affected."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>bucketfs_conn</th>\n",
-       "            <th>sub_dir</th>\n",
-       "            <th>model_name</th>\n",
-       "            <th>task_name</th>\n",
-       "            <th>model_path</th>\n",
-       "            <th>error_message</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>bfs_ai_lab_connection</td>\n",
-       "            <td>models</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "            <td>None</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "+-----------------------+---------+------------+-----------+------------+---------------+\n",
-       "|     bucketfs_conn     | sub_dir | model_name | task_name | model_path | error_message |\n",
-       "+-----------------------+---------+------------+-----------+------------+---------------+\n",
-       "| bfs_ai_lab_connection |  models |    None    |    None   |    None    |      None     |\n",
-       "+-----------------------+---------+------------+-----------+------------+---------------+"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql --save udf_output\n",
     "SELECT TE_LIST_MODELS_UDF(\n",
     "    '{{ai_lab_config.bfs_connection_name}}',\n",
     "    '{{ai_lab_config.bfs_model_subdir}}'\n",
@@ -552,7 +172,23 @@
    "id": "6d785139-c83a-4474-ad1c-66870a9dcc2c",
    "metadata": {},
    "source": [
-    "`TE_DELETE_MODEL_UDF` will not fail if an invalid parameter was given, but it "
+    "`TE_DELETE_MODEL_UDF` will not fail if an invalid parameter was given, but it will indicate an error in the output columns `success` and `error_message`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "852650eb-308b-45a6-a544-84eae6df07e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql --save udf_output_error\n",
+    "SELECT TE_DELETE_MODEL_UDF(\n",
+    "    '{{ai_lab_config.bfs_connection_name}}',\n",
+    "    '{{ai_lab_config.bfs_model_subdir}}',\n",
+    "    'arpanghoshal/EkmanClassifier',\n",
+    "    'text-classification'\n",
+    ")"
    ]
   }
  ],
