Added missing metadata tags to nb

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_administration.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_administration.ipynb
@@ -157,7 +157,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9ad81a7f-f0ca-4473-a4ba-25349313f5d9",
-   "metadata": {},
+   "metadata": {
+       "tags": [
+     "running_model"
+    ]
+   },
    "outputs": [],
    "source": [
     "%%sql --save udf_output\n",
@@ -179,7 +183,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "852650eb-308b-45a6-a544-84eae6df07e9",
-   "metadata": {},
+   "metadata": {
+       "tags": [
+     "running_model_error"
+    ]
+   },
    "outputs": [],
    "source": [
     "%%sql --save udf_output_error\n",
