--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_administration.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_administration.ipynb
@@ -5,9 +5,9 @@
    "id": "8fa128b9-3c22-4f33-85c5-be5d9c5b290f",
    "metadata": {},
    "source": [
-    "# Mode Administration\n",
+    "# Model Management\n",
     "\n",
-    "This model shows you can manage the installed models in BucketFS.\n",
+    "This model shows how you can manage the installed models in BucketFS.\n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -158,7 +158,7 @@
    "execution_count": null,
    "id": "9ad81a7f-f0ca-4473-a4ba-25349313f5d9",
    "metadata": {
-       "tags": [
+    "tags": [
      "running_model"
     ]
    },
@@ -184,7 +184,7 @@
    "execution_count": null,
    "id": "852650eb-308b-45a6-a544-84eae6df07e9",
    "metadata": {
-       "tags": [
+    "tags": [
      "running_model_error"
     ]
    },
