--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_introduction.ipynb
@@ -36,7 +36,7 @@
     "* [Text Translation](./translation.ipynb)\n",
     "* [Zero-Shot Text Classification](zero_shot_classification.ipynb)\n",
     "\n",
-    "## Model Administration\n",
+    "## Model Management\n",
     "\n",
     "You also can manage the installed models with the extension:\n",
     "\n",
