--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_management.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_management.ipynb
@@ -108,7 +108,7 @@
     "SELECT TE_LIST_MODELS_UDF(\n",
     "    '{{ai_lab_config.bfs_connection_name}}',\n",
     "    '{{ai_lab_config.bfs_model_subdir}}'\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -131,18 +131,18 @@
      "slide_type": ""
     },
     "tags": [
-     "running_model"
+     "running_model_delete"
     ]
    },
    "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
-    "SELECT TE_DELETE_MODEL_UDF(\n",
-    "    '{{ai_lab_config.bfs_connection_name}}',\n",
-    "    '{{ai_lab_config.bfs_model_subdir}}',\n",
-    "    'arpanghoshal/EkmanClassifier',\n",
-    "    'text-classification'\n",
-    ")"
+    "model_delete = %sql SELECT TE_DELETE_MODEL_UDF( \\\n",
+    "    '{{ai_lab_config.bfs_connection_name}}', \\\n",
+    "    '{{ai_lab_config.bfs_model_subdir}}', \\\n",
+    "    'arpanghoshal/EkmanClassifier', \\\n",
+    "    'text-classification' \\\n",
+    ")\n",
+    "model_delete"
    ]
   },
   {
@@ -176,27 +176,28 @@
    "id": "6d785139-c83a-4474-ad1c-66870a9dcc2c",
    "metadata": {},
    "source": [
-    "`TE_DELETE_MODEL_UDF` will not fail if an invalid parameter was given, but it will indicate an error in the output columns `success` and `error_message`:"
+    "`TE_DELETE_MODEL_UDF` will not fail if an invalid parameter was given, but it will indicate an error in the output columns `success` and `error_message`.\n",
+    "We can observe if we now try to delete the same model again:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "852650eb-308b-45a6-a544-84eae6df07e9",
+   "id": "9e6baa6d-82ed-4cd1-9e03-c91d984f23b5",
    "metadata": {
     "tags": [
-     "running_model_error"
+     "running_model_delete_error"
     ]
    },
    "outputs": [],
    "source": [
-    "%%sql --save udf_output_error\n",
-    "SELECT TE_DELETE_MODEL_UDF(\n",
-    "    '{{ai_lab_config.bfs_connection_name}}',\n",
-    "    '{{ai_lab_config.bfs_model_subdir}}',\n",
-    "    'arpanghoshal/EkmanClassifier',\n",
-    "    'text-classification'\n",
-    ")"
+    "model_delete_with_error = %sql SELECT TE_DELETE_MODEL_UDF( \\\n",
+    "    '{{ai_lab_config.bfs_connection_name}}', \\\n",
+    "    '{{ai_lab_config.bfs_model_subdir}}', \\\n",
+    "    'arpanghoshal/EkmanClassifier', \\\n",
+    "    'text-classification' \\\n",
+    ")\n",
+    "model_delete_with_error"
    ]
   }
  ],
