--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_introduction.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "You also can manage the installed models with the extension:\n",
     "\n",
-    "* [Model Administration](./model_administration.ipynb)"
+    "* [Model Management](./model_management.ipynb)"
    ]
   }
  ],
