Fixes from review

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_management.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_management.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "## List available models\n",
     "\n",
-    "Now we have at least model installed in BucketFS. (If you have already executed other notebooks from the Transformer Extension tuturial, you probably will have more installed)\n",
+    "Now we have at least one model installed in BucketFS. (If you have already executed other notebooks from the Transformer Extension tuturial, you probably will have more models installed)\n",
     "\n",
     "We now can use the `TE_LIST_MODELS_UDF` UDF to check all available models."
    ]
