Added comment as suggested in review

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_management.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/model_management.ipynb
@@ -119,7 +119,8 @@
     "## Delete a model\n",
     "\n",
     "You can delete a model using the `TE_DELETE_MODEL_UDF` UDF.\n",
-    "In the following example we delete the model, which was installed before.\n"
+    "In the following example we delete the model, which was installed before.\n",
+    "Note: We don't use the `%%sql` expression here because it interfers with the test tools. But feel free to use `%%sql` in your own notebooks.\n"
    ]
   },
   {
@@ -177,7 +178,8 @@
    "metadata": {},
    "source": [
     "`TE_DELETE_MODEL_UDF` will not fail if an invalid parameter was given, but it will indicate an error in the output columns `success` and `error_message`.\n",
-    "We can observe if we now try to delete the same model again:"
+    "We can observe if we now try to delete the same model again.",
+    "Note: We don't use the `%%sql` expression here because it interfers with the test tools. But feel free to use `%%sql` in your own notebooks.\n"
    ]
   },
   {
