#417: Added TE model mgmt notebook (#418)
fixes #417: Added TE model mgmt notebook

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_introduction.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_introduction.ipynb
@@ -34,16 +34,14 @@
     "* [Text Generation](./text_generation.ipynb)\n",
     "* [Token Classification](./token_classification.ipynb)\n",
     "* [Text Translation](./translation.ipynb)\n",
-    "* [Zero-Shot Text Classification](zero_shot_classification.ipynb)"
+    "* [Zero-Shot Text Classification](zero_shot_classification.ipynb)\n",
+    "\n",
+    "## Model Management\n",
+    "\n",
+    "You also can manage the installed models with the extension:\n",
+    "\n",
+    "* [Model Management](./model_management.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a23ef016-549b-4197-a07e-95da58fd7b4c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
